--- a/index.html
+++ b/index.html
@@ -1,12 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <form action="/process" method="post">
+        <div>
+            <label>First Name:*</label>
+            <input type="text" placeholder="First Name">
+        </div>
+        <div>
+            <label>Last Name:*</label>
+            <input type="text" placeholder="Last Name">
+        </div>
+        <div>
+            <label> Email Address:* </label>
+            <input type="text" placeholder="example@email.com">
+        </div>
+        <div>
+            <label> Password:*</label>
+            <input type="password">
+        </div>
+        <div>
+            <label> Confirm Password:* </label>
+            <input type="password">
+        </div>
+        <div>
+            <input type="date">
+            <label> Birthday: </label>
+        </div>
+        <div>
+            <label>Gender Identity:</label>
+        </div>
+        <div>
+            <input type="radio" name="genderId" id="Male">
+            <label for="Male"> Male </label>
+
+            <input type="radio" name="genderId" id="Female">
+            <label for="Female"> Female </label>
+
+            <input type="radio" name="genderId" id="Non_binary">
+            <label for="Non_binary"> Non-binary </label>
+
+            <input type="radio" name="genderId" id="notToAnswer">
+            <label for="notToAnswer"> I prefer not to answer </label>
+        </div>
+        <div>
+            A short description about yourself:
+        </div>
+        <div> 
+            <textarea name="comment" cols="20" rows="3" id="commetbox">Comment here!
+            </textarea>
+        </div>
+        <div>
+            Favorite Language:
+            <select name="Favorite_Language">
+                <option>JavaScript</option>
+                <option>Python</option>
+                <option>C++</option>
+                <option>HTML</option>
+            </select>
+        </div>
+        <div><input type="checkbox">Yes, I would like to receive periodic email updates
+        </div>
+        <div>
+            <input type="submit" value="Creat Account">
+        </div>
+        <div>
+            * Indicates a required field
+        </div>
+    </form>
 </body>
+
 </html>
